--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                             <div class="swiper-wrapper">
                                 <div class="col-lg-4 swiper-slide">
                                     <div class="team-box text-center">
-                                        <div style="background-image: url(/Users/sauravsisodia/BTech/btech/food-website-main/photo/1.JPG);"
+                                        <div style="background-image: url(photo/1.JPG);"
                                             class="team-img back-img">
 
                                         </div>
@@ -641,7 +641,7 @@
                                 </div>
                                 <div class="col-lg-4 swiper-slide">
                                     <div class="team-box text-center">
-                                        <div style="background-image: url(/Users/sauravsisodia/BTech/btech/food-website-main/photo/2.JPG);"
+                                        <div style="background-image: url(photo/2.JPG);"
                                             class="team-img back-img">
 
                                         </div>
@@ -667,7 +667,7 @@
                                 </div>
                                 <div class="col-lg-4 swiper-slide">
                                     <div class="team-box text-center">
-                                        <div style="background-image: url(/Users/sauravsisodia/BTech/btech/food-website-main/photo/3.JPG);"
+                                        <div style="background-image: url(photo/3.JPG);"
                                             class="team-img back-img">
 
                                         </div>
@@ -693,7 +693,7 @@
                                 </div>
                                 <div class="col-lg-4 swiper-slide">
                                     <div class="team-box text-center">
-                                        <div style="background-image: url(/Users/sauravsisodia/BTech/btech/food-website-main/photo/4.JPG);"
+                                        <div style="background-image: url(photo/4.JPG);"
                                             class="team-img back-img">
 
                                         </div>
@@ -719,7 +719,7 @@
                                 </div>
                                 <div class="col-lg-4 swiper-slide">
                                     <div class="team-box text-center">
-                                        <div style="background-image: url(/Users/sauravsisodia/BTech/btech/food-website-main/photo/5.JPG);"
+                                        <div style="background-image: url(photo/5.JPG);"
                                             class="team-img back-img">
 
                                         </div>
@@ -784,7 +784,7 @@
                                         <div class="testimonials-box">
                                             <div class="testimonial-box-top">
                                                 <div class="testimonials-box-img back-img"
-                                                    style="background-image: url(/Users/sauravsisodia/BTech/btech/food-website-main/photo/1.JPG);">
+                                                    style="background-image: url(photo/1.JPG);">
                                                 </div>
                                                 <div class="star-rating-wp">
                                                     <div class="star-rating">
@@ -805,7 +805,7 @@
                                         <div class="testimonials-box">
                                             <div class="testimonial-box-top">
                                                 <div class="testimonials-box-img back-img"
-                                                    style="background-image: url(/Users/sauravsisodia/BTech/btech/food-website-main/photo/2.JPG);">
+                                                    style="background-image: url(photo/2.JPG);">
                                                 </div>
                                                 <div class="star-rating-wp">
                                                     <div class="star-rating">
@@ -826,7 +826,7 @@
                                         <div class="testimonials-box">
                                             <div class="testimonial-box-top">
                                                 <div class="testimonials-box-img back-img"
-                                                    style="background-image: url(/Users/sauravsisodia/BTech/btech/food-website-main/photo/3.JPG);">
+                                                    style="background-image: url(photo/3.JPG);">
                                                 </div>
                                                 <div class="star-rating-wp">
                                                     <div class="star-rating">
@@ -847,7 +847,7 @@
                                         <div class="testimonials-box">
                                             <div class="testimonial-box-top">
                                                 <div class="testimonials-box-img back-img"
-                                                    style="background-image: url(/Users/sauravsisodia/BTech/btech/food-website-main/photo/4.JPG);">
+                                                    style="background-image: url(photo/4.JPG);">
                                                 </div>
                                                 <div class="star-rating-wp">
                                                     <div class="star-rating">
